# Notes

./: CMakeLists.txt  Readme.md  editor.cpp  editor.h  editor.ui  widget.cpp  widget.h  widget.ui
HunspellLib/: CMakeLists.txt  hunspell.cxx
Notes/: CMakeLists.txt  checker.cpp  codeeditor.h  database.cpp  database.h  editor.cpp  editor.h  editor.ui  highlighter.cpp  main.cpp  stylehelper.cpp  stylehelper.h  widget.cpp  widget.h  widget.ui
Notes/!hs/: CMakeLists.txt  checker.cpp  checker.h  main.cpp  mainwindow.cpp
Notes/assets/themes/: standart.json
